Corrected sass, aligned navbar, Got started finally

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,33 +1,40 @@
 #home_navbar {
     width: 100%;
-    height: 40.5px;
-    background-color: #f9f9f9;
-    #home_nav_prop {
-            width: 201px;
-            height: 5.5px;
-            font-family: Poppins;
-            font-size: 7px;
-            font-weight: normal;
-            font-style: normal;
-            font-stretch: normal;
-            line-height: 2.14;
-            letter-spacing: normal;
-            text-align: center;
-            
-        ul{ 
-           color: #666666;
-                li {
-                float: left;
-                list-style: none;
-                padding-left: 10px;
-                }
-                a {
-                    text-decoration: none;
-                    color: inherit;
-                }
-                .pink_color {
-                    color: #ee534f;
-                }
-            }
-    }
-} 
+    height: 65px;
+    background-color: #f9f9f9; 
+    text-align: center;
+    margin-top: -15px; 
+}
+ #home_nav_prop {
+    text-align: center; 
+    // width: 201px;
+    // height: 5.5px;
+    font-family: Poppins;
+    font-size: 18px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 2.14;
+    letter-spacing: normal;
+    position: inherit;
+    margin: 0px 35%;
+    padding: 1px;
+    // float: center;
+    // display: flex;
+}
+ul {
+    color: #666666;
+   
+    li {
+    float: left;
+    list-style: none;
+    padding-right: 20px;
+    } 
+}  
+a {
+    text-decoration: none;
+    color: inherit;
+}
+.pink_color {
+    color: #ee534f;
+}
